updated users logos; updated DB diagram and fixed alignments; updated footer content

--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -26,7 +26,7 @@
         bottom: 0;
         left: 0;
         z-index: 0;
-        height: 515px;
+        height: 480px;
       }
       
 
@@ -204,7 +204,7 @@
                 width: 50%;
                 display: flex;
                 flex-wrap: wrap;
-                align-content: flex-end;
+                align-content: center;
                 padding-right: 1.5rem;
 
 
